--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-voice-recorder",
+    "name": "react-sound-recorder",
     "version": "1.0.0",
     "description": "a simple react audio recorder with some custom things",
     "main": "dist/cjs/index.js",
