--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
-.vscode
-dist/
-node_modules/
-package-lock.json
+# dependencies
+node_modules
 
+# settings
+.vscode
 .npmignore
+
+# builds
+build
+dist
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log
