--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-sound-recorder": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
